--- a/index.html
+++ b/index.html
@@ -11,4 +11,10 @@
         <div id="root"></div>
         <script type="module" src="/src/main.tsx"></script>
     </body>
+
+    <script>
+        document.addEventListener("contextmenu", (event) => {
+            event.preventDefault();
+        });
+    </script>
 </html>
