--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en" class="dark">
+<html lang="de" class="dark">
     <head>
         <meta charset="UTF-8" />
         <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon" />
